# llama.cpp

./: .gitignore  AImodel.sh  CMakeLists.txt  KK2-0905.sh  Llamaserver.py  ToKEssayGuidance.txt  build-info.h  caddylog.sh  caddylogviewer.sh  caddylogviewer2.sh  ggml-metal.metal  help_list.txt  llama.cpp  llama.xctestplan  package-lock.json  package.json
MyDocs/: InstallQwenand ConvertToGGUF.txt
common/: log.h
examples/: CMakeLists.txt
examples/cmap-example/: CMakeLists.txt  c_help_list.txt  cfindimplementedargs.cpp  cmap-example.cpp  find-implemented-args.py  read-dir.cpp  substitute-help-list.txt  test-file.cpp
examples/embedding/: embedding.cpp
examples/main/: main.cpp
examples/server/: README.md  completion.js.hpp  deps_daisyui.min.css.hpp  deps_markdown-it.js.hpp  deps_tailwindcss.js.hpp  httplib.h  index.html.hpp  server.cpp  utils.hpp
prompts/: CompletionProbability.txt  H2G2-questions.txt  LLM-questions.txt
src/: llama-context.cpp
tools/server/: server.cpp
tools/server/webui/: package-lock.json
tools/server/webui/src/components/: ChatMessage.tsx  Header.tsx
tools/server/webui/src/utils/: app.context.tsx  types.ts
